force-app/main/default/objects/Televisit__c/Televisit__c.object-meta.xml
<CustomObject>
    <label>Televisit</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Televisit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Televisits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>