force-app/main/default/objects/Televisit__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>Call will be ended after the planned duration time</inlineHelpText>
    <label>Duration</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 minutes</fullName>
            </value>
            <value>
                <fullName>30 minutes</fullName>
            </value>
            <value>
                <fullName>45 minutes</fullName>
            </value>
            <value>
                <fullName>60 minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>