force-app/main/default/objects/Televisit__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception</label>
    <type>TextArea</type>
</CustomField>