force-app/main/default/objects/Televisit__c/fields/Reshedule_Email_Notification_Check__c.field-meta.xml
<CustomField>
    <fullName>Reshedule_Email_Notification_Check__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reshedule Email Notification Check</label>
    <type>TextArea</type>
</CustomField>