force-app/main/default/objects/Televisit__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session Id</label>
    <type>TextArea</type>
</CustomField>