force-app/main/default/objects/Televisit__c/fields/Source_Community__c.field-meta.xml
<CustomField>
    <fullName>Source_Community__c</fullName>
    <label>Source Community</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IQVIA Referral Hub</fullName>
            </value>
            <value>
                <fullName>Janssen Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>