force-app/main/default/objects/Televisit__c/fields/Televisit_Record_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Televisit_Record_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Televisit Record Vendor</label>
    <referenceTo>Televisit_Record_Vendor__c</referenceTo>
    <relationshipLabel>Televisits</relationshipLabel>
    <relationshipName>Televisits</relationshipName>
    <type>Lookup</type>
</CustomField>