force-app/main/default/objects/Televisit__c/fields/Televisit_Request__c.field-meta.xml
<CustomField>
    <fullName>Televisit_Request__c</fullName>
    <label>Televisit Request</label>
    <type>TextArea</type>
</CustomField>