force-app/main/default/objects/Televisit__c/fields/Televisit_Response__c.field-meta.xml
<CustomField>
    <fullName>Televisit_Response__c</fullName>
    <label>Televisit Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>