force-app/main/default/objects/Televisit__c/fields/Visit_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_End_Date_Time__c</fullName>
    <label>Visit End Date Time</label>
    <type>DateTime</type>
</CustomField>