force-app/main/default/objects/Televisit__c/fields/Visit_Link_Activation_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Link_Activation_End_Time__c</fullName>
    <formula>Visit_End_Date_Time__c  + ( (IF( ISBLANK(TEXT(Participant_Enrollment__r.Study_Site__r.Banner_Dispose_Offset_Time__c)) , 0 , VALUE(TEXT(Participant_Enrollment__r.Study_Site__r.Banner_Dispose_Offset_Time__c))))
/ 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Link Activation End Time</label>
    <type>DateTime</type>
</CustomField>