force-app/main/default/objects/Televisit__c/fields/Visit_Link_Activation_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Link_Activation_Start_Time__c</fullName>
    <formula>Visit_Date_Time__c  - (  Participant_Enrollment__r.Clinical_Trial_Profile__r.Banner_Display_Offset_Time__c /  1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Link Activation Start Time</label>
    <type>DateTime</type>
</CustomField>